# cofola

./: .gitignore  CLAUDE.md  LICENSE  README.md  elsarticle-template-num.tex  problem_to_file.py  pyproject.toml  results.csv  setup.py  solve.py  wfomc_problems.pkl
.claude/: ralph-loop.local.md
.claude/logs/: session-20260226-ecf21374.md  session-20260227-0eac6c63.md  session-20260227-3f1ff984.md  session-20260227-5e3fb491.md  session-20260227-d1ac502c.md  session-20260228-0bb4b1db.md  session-20260228-18914a63.md  session-20260228-275182ac.md  session-20260301-275182ac.md  session-20260304-08073e00.md  session-20260304-275182ac.md  session-20260305-57a5be49.md  session-20260305-5f02a7a5.md  session-20260306-03fdcee2.md  session-20260306-0a831a5a.md  session-20260306-2263f4a1.md  session-20260306-306c8e8e.md  session-20260306-385eb911.md  session-20260306-5135ef1a.md  session-20260306-572ea795.md  session-20260306-71ce4dc3.md  session-20260310-64eaaa83.md  session-20260310-bb94c983.md  (+2 more)
.serena/: project.yml
cofola/: context.py  solver.py  utils.py
docs/: development.md  language-reference.md  planning-layer.md  problem-builder-usage.md
plan/: backend-ir-native.md  frontend-ir-separation.md  ir-refactor.md  logging-design.md  lowering-tuple-fix.md  partref-as-source.md  sized-object-design.md
problems/: all.json
scripts/: plot.py  results.csv  solve.py
tests/: test_all_problems.py  test_backend_base.py  test_backend_wfomc.py  test_parser_errors.py  test_pass_infrastructure.py  test_planning_utilities.py  test_problem_builder_usage.py  test_type_check.py
(+208 files in other folders)
