[project]
name = "cofola"
version = "0.1.0"
description = "A solver for combinatorics math problems using first-order logic"
readme = "README.md"
authors = [
    { name = "lucienwang1009", email = "lucienwang1009@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "scipy>=1.13.1",
    "wfomc",
]

[project.scripts]
cofola = "cofola.solver:main"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.sources]
wfomc = { git = "https://github.com/yuanhong-wang/WFOMC.git", branch = "for_cofola" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
